--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,5 +19,6 @@ jobs:
       run: npm install
 
     - run: npm publish
+      if: github.ref == 'refs/heads/master'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}        
